# fizz

./: Cargo.toml  LICENSE  README.md
crates/viewer2d/: Cargo.toml
crates/viewer2d/src/: component.rs  inspector.rs  log.rs  main.rs  render.rs
crates/viewer3d/: Cargo.toml
dim/fizz2d/: Cargo.toml
dim/fizz3d/: Cargo.toml
src/: lib.rs
src/base/: array_nd.rs  face_array.rs  grid.rs  grid_iterators.rs  mod.rs  range.rs  vec_ext.rs
src/sph/: kernels.rs  mod.rs  parameters.rs  particles.rs  simulation.rs
src/util/: mod.rs  newtons_method.rs
