[package]
name = "viewer2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fizz2d = { path = "../../dim/fizz2d" }
nalgebra = "0.30"

macroquad = "0.3"
egui-macroquad = "0.9"
egui = "0.17"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
tracing-tree = "0.2"
