[package]
name = "phys2d"
version = "0.1.0"
edition = "2021"

[lib]
name = "phys2d"
path = "../../src/lib.rs"
required-features = ["2d"]

[features]
default = ["2d"]
2d = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.30.1", features = [ "serde-serialize", "rand"] }
serde = { version = "1.0.136", features = ["derive"] }
num = "0.4.0"
thiserror = "1.0"
