[package]
name = "fizz2d"
version = "0.1.0"
edition = "2021"

[lib]
name = "fizz2d"
path = "../../src/lib.rs"
required-features = ["2d"]

[features]
default = ["2d"]
2d = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.30", features = [ "serde-serialize", "rand"] }
serde = { version = "1", features = ["derive"] }
num = "0.4"
thiserror = "1.0"
tracing = "0.1"
smallvec = "1.8"
