[package]
name = "phys3d"
version = "0.1.0"
edition = "2021"

[lib]
name = "phys3d"
path = "../../src/lib.rs"
required-features = ["3d"]

[features]
default = ["3d"]
3d = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.30.1", features = [ "serde-serialize", "rand"] }
serde = { version = "1.0.136", features = ["derive"] }
num = "0.4.0"
thiserror = "1.0"
